multiple changes for 2.4 adding the pattern system border radius css3 added
git-svn-id: http://piwigo.org/svn/extensions/floPure/Pure_green_nature@16034 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -24,7 +24,7 @@ BODY {
   background-color: #aacb87;	
 }
 
-H2, #imageToolBar A:hover, .row1 , H3{
+H2, #imageToolBar A:hover, .row1 {
 background-color: #76964B;
 }
 #theImage P {
